# UzbekStemmer

./: LICENSE  README.md  setup.cfg  setup.py
src/: Suffixes.xml  UzbekStemmer.py
src/UzbekStemmer/: Suffixes.xml  UzbekStemmer.py
src/UzbekStemmer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
