[metadata]
name = UzbekStemmer
version = 0.2.2
author = Maksud Sharipov, Ulugbek Salaev, Allabergan Yuldashev, Jasur Sobirov
author_email = maqsbek72@gmail.com
description = Uzbek Stemmer for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UlugbekSalaev/UzbekStemmer
project_urls =
    Bug Tracker = https://github.com/MaksudSharipov/UzbekStemmer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src